force-app/main/default/objects/Stripe_Invoice__c/Stripe_Invoice__c.object-meta.xml
<CustomObject>
    <label>Stripe Invoice</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>