force-app/main/default/objects/Stripe_Invoice__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the standard Contact object.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Stripe Invoices</relationshipLabel>
    <relationshipName>Stripe_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>