force-app/main/default/objects/Stripe_Invoice__c/fields/Discounts_Applied__c.field-meta.xml
<CustomField>
    <fullName>Discounts_Applied__c</fullName>
    <label>Discounts Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>