force-app/main/default/objects/Stripe_Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>