force-app/main/default/objects/Stripe_Invoice__c/fields/Dunning_Status__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Status__c</fullName>
    <label>Dunning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>trying</fullName>
                <label>Trying</label>
            </value>
            <value>
                <fullName>exhausted</fullName>
                <label>Exhausted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>