force-app/main/default/objects/Stripe_Invoice__c/fields/Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Line_Items__c</fullName>
    <label>Line Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>