force-app/main/default/objects/Stripe_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>open</fullName>
                <label>Open</label>
            </value>
            <value>
                <fullName>paid</fullName>
                <label>Paid</label>
            </value>
            <value>
                <fullName>uncollectible</fullName>
                <label>Uncollectible</label>
            </value>
            <value>
                <fullName>void</fullName>
                <label>Void</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>