force-app/main/default/objects/Stripe_Invoice__c/fields/Stripe_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Invoice_ID__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Invoice ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>