force-app/main/default/objects/Stripe_Invoice__c/fields/Stripe_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Subscription</label>
    <referenceTo>Stripe_Subscription__c</referenceTo>
    <relationshipLabel>Stripe Invoices</relationshipLabel>
    <relationshipName>Stripe_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>